# reliapi

./: .gitignore  Dockerfile  Makefile  README.md  product.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish-docker.yml  publish-npm.yml  publish-pypi.yml  release-assets.yml
action/: action.yml  index.js  package.json
app/routes/: onboarding.py
cli/: __init__.py  main.py  pyproject.toml
docs/: ARCHITECTURE.md  SECRETS_SETUP.md  docker-hub-overview.md  index.html  rapidapi-documentation.md  rapidapi-long-description.txt  release.md
examples/: README.md
examples/integrations/: README.md
integrations/: README.md
openapi/: openapi.json  openapi.rapidapi.yaml  openapi.yaml
postman/: README.md
reliapi/: __init__.py
reliapi/adapters/http_generic/: __init__.py  service.py
reliapi/adapters/llm/: __init__.py  anthropic.py  base.py  factory.py  mistral.py  openai.py
reliapi/app/: __init__.py  dependencies.py  main.py  schemas.py  services.py
reliapi/app/business_services/: __init__.py  subscription.py
reliapi/app/routes/: __init__.py  analytics.py  calculators.py  dashboard.py  health.py  onboarding.py  paddle.py  proxy.py  rapidapi.py
reliapi/config/: __init__.py  loader.py  schema.py
reliapi/core/: __init__.py  cache.py  circuit_breaker.py  client_profile.py  cost_estimator.py  errors.py  free_tier_restrictions.py  http_client.py  idempotency.py  key_pool.py  logging.py  rate_limiter.py  rate_scheduler.py  retry.py  security.py
reliapi/integrations/: __init__.py  rapidapi.py  rapidapi_tenant.py  routellm.py
reliapi/integrations/flowise/: README.md
reliapi/integrations/langchain/: README.md  __init__.py  chat_models.py
reliapi/integrations/llamaindex/: README.md  __init__.py  llm.py
reliapi/metrics/: __init__.py  prometheus.py
scripts/: bump_version.py  generate_openapi.py  generate_postman.sh  generate_sdk.sh  smoke_test.sh
sdk/js/: package.json.tmpl
sdk/python/: pyproject.toml.tmpl
tests/: test_multi_tenant.py
