[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliapi-cli"
version = "1.1.0"
description = "CLI client for ReliAPI - Reliability layer for API calls"
readme = {text = "CLI client for ReliAPI - Reliability layer for API calls.", content-type = "text/markdown"}
license = "AGPL-3.0-only"
authors = [
    {name = "KikuAI-Lab", email = "dev@kikuai.dev"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
reli = "cli.main:main"

[project.urls]
"Homepage" = "https://github.com/kiku-jw/reliapi"
"Bug Tracker" = "https://github.com/kiku-jw/reliapi/issues"
"Documentation" = "https://reliapi.kikuai.dev"

[tool.setuptools]
packages = ["cli"]

[tool.setuptools.package-dir]
cli = "."
